1998-11-29  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-sel.c (gnome_icon_selection_init): Fix to the new
	behaviour of GnomeIconList.

	* gnome-icon-list.c: Frozen tests are now done by comparing the
	sign, not comparing different than zero.
	(gil_init): IconList no longer starts in frozen state by popular demand.

1998-11-29  Havoc Pennington  <hp@pobox.com>

	* gnome-guru.c: add a cast or two to remove compiler
	warnings.

1998-11-29  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-app-helper.c (create_menu_item): Don't put unprotected
	newlines in strings.  It is not portable.
	(create_radio_menu_items): Likewise.
	(create_help_entries): Likewise.
	(create_toolbar_item): Likewise.
	(create_radio_toolbar_items): Likewise.
	(gnome_app_remove_menus): Likewise.
	(gnome_app_insert_menus_custom): Likewise.

Sat Nov 28 21:30:09 1998  George Lebl  <jirka@5z.com>

	* gnome-icon-sel.c: use GnomeIconList instead of CList, fixed
	  minor possible leak with non-shown icons, and made _clear
	  take an extra parameter as a boolean wheather the non shown
	  icons are also cleared or not. Also documented the widget's
	  functions

	* gnome-icon-entry.c: fixed a small assumption about internals
	  of icon-sel and documented the functions in icon-entry

	* gnome-pixmap.c: do gtk_widget_combine_mask instead of the gdk
	  function, this fixes pixmap problems with themes in case an
	  x window is used

1998-11-28  Justin Maurer  <justin@openprojects.net>

	* gnome-app-helper.h: removed GNOMEUIINFO_SUBTREE_ITEM_STOCK macro 
	(redundant). removed right justification stuff.

	* gnome-app-helper.c: removed right justification stuff. cleaned up 
	code.
	(create_help_entries): takes one less argument now.
	(create_radio_menu_items): same.

1998-11-28  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-propertybox.c (gnome_property_box_append_page): Add checks
	to the entry points.
	(gnome_property_box_set_state): New function, lets you unsensitize
	the properybox.